# Liam

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  main.l__m  main.liam  main.py  main.x  out.cpp  premake5.lua  std.liam  syntax  syntax.md
cliamc/: CMakeLists.txt  arena.h  lexer.h  liam.c  macros.h  main.c  main.liam  parser.h  (+1 more)
liamc/: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  build.bat  build.zig  liamc.mk  out.cpp  premake5.lua  project.4coder  run.bat
liamc/.github/: tests.yaml
liamc/.github/workflows/: tests.yaml
liamc/.remedy/: session.rdbg
liamc/code/: main.liam  out.cpp  out.rs  std.liam
liamc/core/: core.cpp  core.h
liamc/include/: compiler.h  emitter.h  errors.h  expression.h  lexer.h  liam.h  macros.h  parser.h  statement.h  type_checker.h  type_info.h
liamc/include/C_backend/: c_backend.h
liamc/include/backends/: rust_backend.h
liamc/include/rust_backend/: rust_backend.h
liamc/out.exe.dSYM/Contents/: Info.plist
liamc/runtime/: builtin_string.cpp  builtin_string.h  collections.h  core.cpp  core.h  io.cpp  io.h  lib.h  memory.cpp  memory.h  os.h
liamc/scripts/: build_run.sh  release_macos.sh  selfhost.sh  setup_dev.sh
liamc/selfhost/: lexer.liam  main.liam  out.cpp  parser.liam  test.liam
liamc/selfhost/tests/: lex_test1.liam
liamc/src/: args.cpp  args.h  ast.cpp  ast.h  borrow_checker.cpp  borrow_checker.h  compilation_unit.cpp  compilation_unit.h  compiler.cpp  compiler.h  cpp_backend.cpp  cpp_backend.h  cxxopts.h  emitter.cpp  errors.cpp  errors.h  expression.cpp  expression.h  file.cpp  file.h  lexer.cpp  lexer.h  liam.cpp  liam.h  llvm_backend.cpp  llvm_backend.h  main.cpp  module.cpp  module.h  parser.cpp  parser.h  sorting_node.h  statement.cpp  statement.h  strings.h  test.cpp  token.cpp  token.h  type_checker.cpp  type_checker.h  (+4 more)
liamc/src/C_backend/: c_backend.cpp
liamc/src/backends/: c_backend.cpp  cpp_backend.cpp  cpp_backend.h  rust_backend.cpp  rust_backend.h
liamc/src/baseLayer/: debug.h  types.cpp  types.h
liamc/src/fmt/: color.h  core.h  format-inl.h  format.h
liamc/src/rust_backend/: rust_backend.cpp
liamc/stdlib/: basic.liam  collections.liam  io.liam  memory.liam  string.liam  strings.liam
liamc/stdlib/include/: builtin_string.cpp  builtin_string.h  collections.h  core.cpp  core.h  io.h  liam_stdlib.cpp  liam_stdlib.h  lib.h  memory.h  os.cpp  os.h  stblib.h  stdlib.cpp
liamc/tests/: out.cpp  output.py  runner.py
liamc/tests/liam/: basic_ownership.liam  basic_typedefs.liam  binary_expressions.liam  complex_conditionals.liam  complex_typedefs.liam  conditions.liam  enums.liam  for.liam  for_over_range.liam  function_expressions.liam  generic_member_functions.liam  generics.liam  if.liam  imports.liam  member_functions.liam  new_line_braces.liam  null.liam  number_literals.liam  pointer_dereference.liam  pointer_slices.liam  pointers.liam  printing.liam  propagation.liam  range_slicing.liam  slices.liam  static_arrays.liam  structs.liam  unions.liam
liamc/tests/liam/basic_typedefs/: basic_typedefs.liam
liamc/tests/liam/binary_expressions/: binary_expressions.liam
liamc/tests/liam/complex_conditions/: complex_conditionals.liam
liamc/tests/liam/conditions/: conditions.liam
liamc/tests/liam/enums/: enums.liam
liamc/tests/liam/for/: for.liam
liamc/tests/liam/functions_expressions/: function_expressions.liam
liamc/tests/liam/generic_member_functions/: generic_member_functions.liam
liamc/tests/liam/generics/: generics.liam
liamc/tests/liam/if/: if.liam
liamc/tests/liam/imports/: imports.liam
liamc/tests/liam/match/: match.liam
liamc/tests/liam/member_functions/: member_functions.liam
liamc/tests/liam/new_line_braces/: new_line_braces.liam
liamc/tests/liam/null/: null.liam
liamc/tests/liam/other/: import_me.liam
liamc/tests/liam/pointer_dereference/: pointer_dereference.liam
liamc/tests/liam/pointer_slices/: pointer_slices.liam
liamc/tests/liam/pointers/: pointers.liam
liamc/tests/liam/printing/: printing.liam
liamc/tests/liam/structs/: structs.liam
liampm/: Cargo.toml
liampm/src/: main.rs
(+105 files in other folders)
