[package]
name = "liampm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.83"
serde = { version = "1.0.100", features = ["derive"] }
octocrab = "0.17"
tokio = { version = "1", features = ["full"] }
flate2 = "1.0.24"
tar = "0.4.38"